--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.5.0",
+    "lightningcss": "^1.30.1",
     "lucide-react": "^0.479.0",
     "motion": "^12.5.0",
     "next-themes": "^0.4.6",
